# name: test_doc_needextend_dynamic[test_app0]
  dict({
    'current_version': '',
    'project': 'Python',
    'versions': dict({
      '': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'REQ_1': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'REQ_1',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_1',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'REQ_A_1',
              'REQ_B_1',
            ]),
            'modifications': 2,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_1',
            'template': None,
            'title': 'Requirement 1',
            'type': 'req',
            'type_name': 'Requirement',
          }),
          'REQ_A_1': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'REQ_A_1',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement A 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_A_1',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'modifications': 0,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_A_1',
            'template': None,
            'title': 'Requirement A 1',
            'type': 'req',
            'type_name': 'Requirement',
          }),
          'REQ_B_1': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'REQ_B_1',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement B 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_B_1',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'modifications': 0,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_B_1',
            'template': None,
            'title': 'Requirement B 1',
            'type': 'req',
            'type_name': 'Requirement',
          }),
          'REQ_C_1': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'REQ_C_1',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement C 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_C_1',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'modifications': 0,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_C_1',
            'template': None,
            'title': 'Requirement C 1',
            'type': 'req',
            'type_name': 'Requirement',
          }),
        }),
        'needs_amount': 4,
      }),
    }),
  })
# ---
# name: test_doc_needextend_html[test_app0]
  dict({
    'current_version': '',
    'project': 'Python',
    'versions': dict({
      '': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'extend_test_003': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'extend_test_003',
            'delete': None,
            'description': '''
              Had no outgoing links.
              Got an outgoing link ``extend_test_004``.
            ''',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 3',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_003',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'extend_test_004',
            ]),
            'modifications': 1,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_003',
            'template': None,
            'title': 'needextend Example 3',
            'type': 'story',
            'type_name': 'User Story',
          }),
          'extend_test_004': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'extend_test_004',
            'delete': None,
            'description': '''
              Had no links.
              Got an incoming links ``extend_test_003`` and ``extend_test_006``.
            ''',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 4',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_004',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'modifications': 0,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_004',
            'template': None,
            'title': 'needextend Example 4',
            'type': 'story',
            'type_name': 'User Story',
          }),
          'extend_test_005': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'extend_test_005',
            'delete': None,
            'description': '''
              Had the two links: ``extend_test_003`` and ``extend_test_004``.
              Both got deleted.
            ''',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 5',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_005',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'modifications': 1,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_005',
            'template': None,
            'title': 'needextend Example 5',
            'type': 'story',
            'type_name': 'User Story',
          }),
          'extend_test_006': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'extend_test_006',
            'delete': None,
            'description': 'Had the link ``extend_test_003``, got another one ``extend_test_004``.',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 6',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_006',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'extend_test_003',
              'extend_test_004',
            ]),
            'modifications': 2,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_006',
            'template': None,
            'title': 'needextend Example 6',
            'type': 'story',
            'type_name': 'User Story',
          }),
          'extend_test_007': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'extend_test_007',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 7',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_007',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'extend_test_003',
              'extend_test_004',
              'extend_test_005',
            ]),
            'modifications': 1,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'signature': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_007',
            'template': None,
            'title': 'needextend Example 7',
            'type': 'story',
            'type_name': 'User Story',
          }),
          'extend_test_page': dict({
            'arch': dict({
            }),
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content_id': 'extend_test_page',
            'delete': None,
            'description': '',
            'docname': 'page_1',
            'doctype': '.rst',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend different pages test',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_page',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'modifications': 2,
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'section_name': 'need objects',
            'sections': list([
              'need objects',
            ]),
            'signature': '',
            'status': 'closed',
            'style': None,
            'tags': list([
              'tag_1',
              'new_tag',
              'another_tag',
            ]),
            'target_id': 'extend_test_page',
            'template': None,
            'title': 'needextend different pages test',
            'type': 'story',
            'type_name': 'User Story',
          }),
        }),
        'needs_amount': 6,
      }),
    }),
  })
# ---
